--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     implementation "com.android.support:support-compat:27.1.1"
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support:customtabs:27.1.1'
     implementation "com.leinardi.android:speed-dial:1.0-alpha03"
     implementation 'us.feras.mdv:markdownview:1.1.0'
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
