--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -101,6 +101,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".RemoteConfig.RemoteConfig"
+            android:label="@string/title_activity_remote_config"
             android:theme="@style/AppTheme.NoActionBar" />
 
     </application>
