--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,13 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven { url 'https://maven.fabric.io/public' }
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.2'
+        classpath 'com.google.gms:google-services:4.0.1' // google-services plugin
+        classpath 'io.fabric.tools:gradle:1.25.4'
         
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -20,6 +24,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
+        maven { url "https://maven.google.com" }
     }
 }
 
