use native lib dir instead of assets to pack rclone executables
on android q, calling exec() on writable application files is a W^X
(https://en.wikipedia.org/wiki/W%5EX) violation and represents an unsafe
application practice. this commit, makes executable code to load from
(read-only) native library directory also used for jni.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ["lib"]
+        }
+    }
 }
 
 repositories {
